--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -46,7 +46,8 @@
                     </td>
                 </tr>
             </table>
-            <h2>Ongoing and Past Transactions of <span th:text="${fullname}">Last Name, First Name Middle Name</span>
+            <h2 class="space">Ongoing and Past Transactions of <span th:text="${fullname}">Last Name, First Name Middle
+                    Name</span>
             </h2>
             <table>
                 <tr class="h3">
