--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -19,6 +19,7 @@
                     <span class="body-1">Welcome back! Login to access or request for your latest university
                         documents</span>
                 </div>
+                <h4 th:if="${activate}">Your account is successfully activated!</h4>
                 <form class="account" th:action="@{/}" method="post" id="singin-form">
                     <h4 th:if="${param.error}">Invalid login credentials</h4>
                     <input type="text" id="username" name="username" class="text-box body-2" placeholder="Username"
