--- a/src/main/resources/templates/student-req-receipt.html
+++ b/src/main/resources/templates/student-req-receipt.html
@@ -23,9 +23,17 @@
                 <h2>Proof of Payment</h2>
                 <form method="post" th:action="@{/requests/student/new/submit}">
                     <input type="text" name="payment" class="text-box body-2" placeholder="Reference Number" required>
-                    <button class="general-button button-1" th:unless="${noTID}">Submit</button>
-                    <button class="general-button button-1" th:if="${noTID}"
-                        th:formaction="@{'/requests/student/'+${TID}+'/submit'}">Submit</button>
+                    <div class="proof-buttons">
+                        <button class="general-button button-1" th:unless="${noTID}">Submit</button>
+                        <button class="general-button button-1" th:if="${noTID}"
+                            th:formaction="@{'/requests/student/'+${TID}+'/submit'}">Submit</button>
+                        <button class="error-general-button button-1" formmethod="get" th:formaction="@{/}"
+                            formnovalidate>
+                            Pay Later
+                        </button>
+
+                    </div>
+
                 </form>
             </div>
 
