--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,8 @@
                         trinitian
                         account
                         now.</a></span>
+                        
+                <span class="body-2 redirect"><a th:href="@{/report}">Generate report</a></span>
             </div>
         </section>
     </main>
