--- a/src/main/resources/reports/frequent_document_request.jrxml
+++ b/src/main/resources/reports/frequent_document_request.jrxml
@@ -40,7 +40,7 @@ DESC]]>
 			<staticText>
 				<reportElement x="90" y="20" width="350" height="30" uuid="3e540675-eabd-454c-9763-1321b1dadd2b"/>
 				<textElement textAlignment="Center">
-					<font fontName="Algerian" size="20"/>
+					<font fontName="Arial" size="20"/>
 				</textElement>
 				<text><![CDATA[Frequent DOCUMENT Request REPORT]]></text>
 			</staticText>
