Minor changes in pages

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -22,7 +22,7 @@
             <span class="body-1 bold" th:text="'Today is '+${date}">Date</span>
             <form>
                 <!-- remove this during spring boot migration-->
-                <button class="reg-button button-1" sec:authorize="isAnonymous()" th:formaction=" @{/}">Sign In</button>
+                <button class="reg-button button-1" sec:authorize="isAnonymous()" th:formaction=" @{/}">Login</button>
                 <button class="reg-button-filled button-1" sec:authorize="isAnonymous()" th:formaction="@{/signup}">Sign
                     Up</button>
                 <button class="reg-button button-1" sec:authorize="isAuthenticated" disabled> <span
