--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,7 +27,7 @@
                     <input type="password" id="password" name="password" class="text-box body-2" placeholder="Password"
                         required>
                     <div class="form-buttons">
-                        <button id="signIn" class="general-button button-1">Sign In</button>
+                        <button id="signIn" class="general-button button-1">Login</button>
                     </div>
                 </form>
                 <span class="body-2 redirect">Don't have an account? &nbsp<a th:href="@{/signup}">Create your
