--- a/src/main/resources/templates/student-req-receipt.html
+++ b/src/main/resources/templates/student-req-receipt.html
@@ -23,6 +23,7 @@
                 <h2>Proof of Payment</h2>
                 <form method="post" th:action="@{/requests/student/new/submit}">
                     <input type="text" name="payment" class="text-box body-2" placeholder="Reference Number" required>
+                    <input type="file" id="avatar" name="avatar" accept="image/*,.pdf, image/jpeg">
                     <div class="proof-buttons">
                         <button class="general-button button-1" th:unless="${noTID}">Submit</button>
                         <button class="general-button button-1" th:if="${noTID}"
